ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes

2012-02-27 German Llort <german.llort@bsc.es>
	* Added script draw_stats to print a DOT graph with each MRNet node statistics.

2012-02-27 German Llort <german.llort@bsc.es>
	* Changed the transmission protocol for hulls in Tree-DBSCAN algorithm so
	that all hulls are transmitted at once in a single package, rather than 
	one by one.

	* Added statistics to display the work done in each node of the MRNet tree.

2012-01-17 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a bug in 'libTraceClusteringImplementation' related to PRV trace 
	reconstruction, when using events instead of states

2011-12-28 Juan Gonzalez <juan.gonzalez@bsc.>
	* Modification in the 'PlottingManager' to only add the 'basename' of the
	DataFileName to the GNUPlot scripts

	* Changes in the internal CGAL kernel to ensure the precision of the
	Hull operations (now, it uses a multiple precission data type offered by
	CGAL, plus an 'lazy' kernel). It is supposed to be more expensive than
	the previous implementations using 'doubles'

	* Adaptative 'MinPoints' values in the TreeDBSCAN across the different
	tree levels. The BackEnds set this value to 3, but this has to be changed
	

2011-12-15 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added 'Timer.cpp' forgotten in last commits

	* Modifications in the TreeDBSCAN backend messages

	* Corrected a bug when printing global/local data on libDistributedClustering

2011-12-13 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Modifications to print same timing information in TreeDBSCAN and
	BurstClustering

2011-12-13 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added sampling support to trace data extraction (parameter '-m' to burst